    * thread to display data can handle different tables based on options.
    * GUI is now handling different sensors for in and out.
    * time series section can now handle different sensors for in and out temperature, pressure and humidity.
    * menu icons have been improved.
    * cleaning thread only cleans test tables if platform is Windows.

  * FIXED:
    * few corrections to make the weather station works on raspberry pi.
    * the size of all splitter handlers has been fixed.
    * an issue with a section of the config file has been fixed.
    * fixed an issue with data display.

### March 5 2021, Release version 0.10.1 ###

  * FIXED:
    * fixed an issue with the update system.

  * ADDED:
    * logging messages have been added in the update system.


### March 5 2021, Release version 0.10.0 ###

  * ADDED:
    * OpenWeather has been added as a weather forecast provider.
    * a new version of the option window has been introduced.
    * meteofrance api and openweather api versions have been added to log.

  * MODIFIED:
    * Openweather has been integrated in all widgets.
    * stylesheet has been tweaked in option window.


### March 2 2021, Release version 0.9.3 ###

  * ADDED:
    * a function to sync graphic materials has been added (to avoid icons and stylesheet issues).

  * FIXED:
    * fixed an issue with paho mqtt disconnect callback.
    * if battery and/or signal values are None, it leads to an exception, it has been fixed.
    * if a sensor is not detected, the corresponding thread is stopped.
    * fixed an issue with the display of min max temperature.


### March 1 2021, Release version 0.9.2 ###

  * ADDED:
    * a function to test postgresql server, database and tables has been added.

  * MODIFIED:
    * time series are plotted only if a connection to the database is successful.
    * the function to test postgresql server, database and tables is now connected to mainwindow, it will